# ustatus

./: .gitignore  CONFIGURATION.md  Pipfile  README.md  pyproject.toml  pyrightconfig.json  setup.py
example/: pystatus.toml
examples/: pystatus.toml  ustatus.toml
src/: cpu_module.py  main.py
src/pystatus/: battery_module.py  config.py  cpu_module.py  docgen.py  line_graph.py  main.py  module.py  remote_service.py  schema.py  volume_module.py
src/pystatus/graphics/: bar_graph.py  line_graph.py  volume.py
src/pystatus/modules/: battery_module.py  cpu_module.py  mpris_module.py  power_module.py  power_profiles_module.py  sway_module.py  tray_module.py  volume_module.py
src/pystatus/utils/: notifications.py  power_utils.py  swaymsg.py
src/ustatus/: main.py
