[tool.poetry]
name = "pystatus"
version = "0.1.0"
description = "Status window for wayland shells."
authors = ["Manuel Brea <m.brea.carreras@gmail.com>"]

[tool.poetry.scripts]
pystatus = "pystatus.main:main"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
